Update 1. Waterfall Model.md

--- a/content/Introduction to Software Engineering/5. Models/1. Waterfall Model.md
+++ b/content/Introduction to Software Engineering/5. Models/1. Waterfall Model.md
@@ -4,3 +4,56 @@
 
 ## Requirement Analysis & Specification Phase
 
+- Understanding the requirements of the customers.
+- Documenting the requirements
+- Customer & Developer work together to decide on the Features, Performance, and the Design requirements.
+- Describes the "what" NOT "how".
+- **SRS** Software Requirement Specification document is created - description of what the system does in Plain English
+
+## Design Phase
+
+- Transform requirement into a suitable form
+- Defines overall architecture with high level & detailed design
+- **SDD** Software Design Document
+
+## Implementation & Unit Testing
+
+- Design is implemented
+- Code is thoroughly examined & modified
+- Output verified
+
+## Integration & System Testing
+
+- Important phase - determines the quality of the end product.
+- Better output -> better the customer satisfaction -> lower the maintenance costs
+
+## Operation & Maintenance phase
+
+- Task performed by every user, once the software is installed.
+
+
+# When to use?
+
+- Requirements are constant & does not change regularly
+- Project is short
+- Tools & technologies used are consistent
+- Resources are well prepared & ready to use
+
+
+# Advantages
+
+- Simple to implement
+- Minimal resources required
+- Requirements are simple & explicitly declared
+- Start & End of each phase is fixed
+- Release date & production cost can be foreshadowed.
+- Easy to control & Clarity for users
+
+
+# Disadvantages
+
+- Risk factor is high
+- Not suitable for complex projects
+- Cannot accept changed during development
+- Tough to revert back to previous phase
+- Does not allow identifying challenges & risks.
