--- a/content/Software Engineering/5. Models/2. Incremental Model.md
+++ b/content/Software Engineering/5. Models/2. Incremental Model.md
@@ -6,4 +6,37 @@
 
 ## Requirement Analysis
 
-- 
+- Identification of the requirements.
+## Design & Development
+
+- Designed & Development is finished
+
+## Testing
+
+- Checks the performance of existing functions & additional.
+
+## Implementation
+
+- Integrated with the rest of the system, made available to the public for testing.
+
+
+# When to use?
+
+- Requirements are superior
+- Lengthy development cycle
+- Team not skilled or trained
+- Quick Release is needed
+- Prioritized requirements
+
+# Advantages
+
+- Easy Error recognizing
+- Easier to Test & Debug
+- Flexible
+- Easily manageable risks
+
+# Disadvantages
+
+- Good planning needed
+- High total cost
+- Well defined interfaces is needed
