Update 1. Basic Syntax.md

--- a/content/Semester 1/MATLAB/Unit 1/1. Basic Syntax.md
+++ b/content/Semester 1/MATLAB/Unit 1/1. Basic Syntax.md
@@ -7,25 +7,48 @@ Super Complex Calculator
 ## Types of Operands
 
 
-| Operand | Function                         |
-| :-----: | -------------------------------- |
-|    +    | Addition                         |
-|    -    | Subtraction                      |
-|    *    | Scalar and Matrix Multiplication |
-|   .*    | Array Multiplication             |
-|    /    | Right Division                   |
-|    \    | Left Division                    |
-|   ./    | Array Right Division             |
-|   .\    | Array Left Division              |
-|    ^    | Scalar & Matrix Exponentiation   |
-|   .^    | Array Exponentiation             |
-| sin ()  | Sin of angle                     |
-| sqrt()  | Square root of a number          |
-|   ans   | Most recent answer               |
-|   i,j   | Imaginary unit √-1               |
-|   Inf   | Infinity                         |
-|   NaN   | Not a Number                     |
-|   pi    | The number n                     |
+|  Operand  | Function                       | Description                                                                                                                                                                                                                 |
+| :-------: | ------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+|     +     | Addition                       | Addition or unary plus. `A + B` adds the values stored in variables `A` and `B`. `A` and `B` must have the same size unless one is a scalar. A scalar can be added to a matrix of any size.                                 |
+|     -     | Subtraction                    | Subtraction or unary minus. `A - B` subtracts the value of `B` from `A`. `A` and `B` must have the same size unless one is a scalar. A scalar can be subtracted from a matrix of any size.                                  |
+|     *     | Matrix Multiplication          | `C = A * B` is the linear algebraic product of matrices `A` and `B`. For non-scalar inputs, the number of columns in `A` must equal the number of rows in `B`. A scalar can multiply a matrix of any size.                  |
+|    .*     | Array Multiplication           | Element-by-element multiplication. `A .* B` computes the product of corresponding elements in arrays `A` and `B`. Both must have the same size unless one is a scalar.                                                      |
+|     /     | Right Division                 | Matrix right division. `B / A` is roughly the same as `B * inv(A)`. More precisely, `B / A = (A' \ B')'`.                                                                                                                   |
+|    ./     | Array Right Division           | Element-by-element right division. `A ./ B` computes the element-wise division `A(i,j) / B(i,j)`. Both `A` and `B` must have the same size unless one is a scalar.                                                          |
+|     \     | Left Division                  | Matrix left division. If `A` is square, `A \ B` is roughly the same as `inv(A) * B`. It solves the equation `AX = B`. A warning is displayed if `A` is nearly singular.                                                     |
+|    .\     | Array Left Division            | Element-by-element left division. `A .\ B` computes `B(i,j) / A(i,j)` element-wise. Both `A` and `B` must have the same size unless one is a scalar.                                                                        |
+|     ^     | Scalar & Matrix Exponentiation | Matrix power. `X ^ p` computes `X` to the power `p`. If `p` is an integer, it uses repeated squaring. For non-integer `p`, it uses eigenvalue decomposition.                                                                |
+|    .^     | Array Exponentiation           | Element-wise exponentiation. `A .^ B` computes `A(i,j)` to the power of `B(i,j)` element-wise. Both must have the same size unless one is a scalar.                                                                         |
+|     '     | Transpose                      | Transposes a matrix. `A'` computes the complex conjugate transpose (Hermitian transpose) of `A`. It flips the rows and columns and also takes the complex conjugate of each element if the matrix contains complex numbers. |
+|    .'     | Array Transpose                | Transposes a matrix without taking the complex conjugate. `A.'` flips the rows and columns but does not affect the values of complex numbers.                                                                               |
+|   sin()   | Sine of angle                  | Computes the sine of angles in radians.                                                                                                                                                                                     |
+|  sqrt()   | Square root of a number        | Computes the square root of a number.                                                                                                                                                                                       |
+|    ans    | Most recent answer             | Stores the most recent result from the command window.                                                                                                                                                                      |
+|    i,j    | Imaginary unit √-1             | Represents the imaginary unit.                                                                                                                                                                                              |
+|    Inf    | Infinity                       | Represents infinity.                                                                                                                                                                                                        |
+|    NaN    | Not a Number                   | Represents undefined or unrepresentable values.                                                                                                                                                                             |
+|    pi     | The number π                   | Represents the mathematical constant π (approximately 3.14159).                                                                                                                                                             |
+|     <     | Less than                      | Relational operator that checks if one value is less than another.                                                                                                                                                          |
+|    <=     | Less than or equal to          | Relational operator that checks if one value is less than or equal to another.                                                                                                                                              |
+|     >     | Greater than                   | Relational operator that checks if one value is greater than another.                                                                                                                                                       |
+|    >=     | Greater than or equal to       | Relational operator that checks if one value is greater than or equal to another.                                                                                                                                           |
+|    ==     | Equal to                       | Relational operator that checks if two values are equal.                                                                                                                                                                    |
+|    ~=     | Not equal to                   | Relational operator that checks if two values are not equal.                                                                                                                                                                |
+|     &     | Logical AND                    | Element-wise logical AND.                                                                                                                                                                                                   |
+|           |                                | Logical OR                                                                                                                                                                                                                  |
+|     ~     | Logical NOT                    | Element-wise logical NOT.                                                                                                                                                                                                   |
+|    &&     | Short-circuit Logical AND      | Logical AND for scalar conditions, with short-circuit evaluation.                                                                                                                                                           |
+|           |                                |                                                                                                                                                                                                                             |
+|  bitand   | Bit-wise AND                   | Computes the bit-wise AND of integers `a` and `b`.                                                                                                                                                                          |
+|   bitor   | Bit-wise OR                    | Computes the bit-wise OR of integers `a` and `b`.                                                                                                                                                                           |
+|  bitxor   | Bit-wise XOR                   | Computes the bit-wise XOR of integers `a` and `b`.                                                                                                                                                                          |
+|  bitcmp   | Bit-wise complement            | Computes the bit-wise complement of `a`.                                                                                                                                                                                    |
+|  bitset   | Set specific bit               | Sets the bit at a specific position in `a`.                                                                                                                                                                                 |
+| bitshift  | Shift bits                     | Shifts bits of `a` left or right by `k` positions.                                                                                                                                                                          |
+| intersect | Set intersection               | Returns values common to both `A` and `B`.                                                                                                                                                                                  |
+|  setdiff  | Set difference                 | Returns values in `A` that are not in `B`.                                                                                                                                                                                  |
+| ismember  | Set membership                 | Returns logical `1` where elements of `A` are in `B`.                                                                                                                                                                       |
+| issorted  | Checks sorted order            | Returns logical `1` if elements of `A` are sorted.                                                                                                                                                                          |
 
 ## Use of Semicolon
 
