MATLAB UNIT 2 CONDITIONALS

--- a/content/Semester 1/MATLAB/Unit 1/3. Input and Output.md
+++ b/content/Semester 1/MATLAB/Unit 1/3. Input and Output.md
@@ -25,8 +25,9 @@
 
    - The `fprintf()` function allows you to display text and numbers in a specific format.  
 
-     ```matlab
+```matlab
      value = 3.14159;
-     fprintf('The value of pi is approximately %.2f\n', value); % %.2f formats the value to 2 decimal places.
-     ```
-   - Note: `\n` is used to move to the next line after printing.
+     fprintf('The value of pi is approximately %.2f\n', value);
+     %.2f formats the value to 2 decimal places.
+     %`\n` is used to move to the next line after printing.
+```
