--- a/content/Semester 1/MATLAB/Unit 2/1. Control Statements OR Decision Making.md
+++ b/content/Semester 1/MATLAB/Unit 2/1. Control Statements OR Decision Making.md
@@ -5,7 +5,7 @@
 
 ![[Pasted image 20241207154702.png]]
 
-if statement and a Boolean (true / false) expression.
+- if statement and a Boolean (true / false) expression.
 
 ```matlab
 a = 10;
@@ -22,7 +22,7 @@ fprintf('value of a is : %d\n', a);
 
 ![[Pasted image 20241207155327.png]]
 
-if statement followed by an optional else statement.
+- if statement followed by an optional else statement.
 
 ```matlab
 a = 100;
@@ -40,7 +40,7 @@ a = 100;
 
 ## if ... elseif ... elseif ... else ... end
 
-if statement followed by one ( or more ) optional elseif and an else statement.
+- if statement followed by one ( or more ) optional elseif and an else statement.
 
 ```matlab
 a = 100;
@@ -64,7 +64,7 @@ a = 100;
 
 ## Nested if
 
-Nest if-else statements. Can use one if or elseif statement inside another elseif.
+- Nest if-else statements. Can use one if or elseif statement inside another elseif.
 
 ```matlab
 a = 100;
@@ -87,8 +87,8 @@ b = 200;
 
 ## Switch statement
 
-Conditionally executes one set of statements from several choices.
-Each choice is covered by a case statement.
+- Conditionally executes one set of statements from several choices.
+- Each choice is covered by a case statement.
 
 ```matlab
 grade = 'B';
@@ -111,7 +111,7 @@ grade = 'B';
 
 ## Nested Switch Statement
 
-It is possible to have a switch as part of the statement sequence of an outer switch.
+- It is possible to have a switch as part of the statement sequence of an outer switch.
 
 ```matlab
 switch(ch1) 
