MATLAB UNIT 2 Complete

--- a/content/Semester 1/MATLAB/Unit 2/3. Vectors and Matrices.md
+++ b/content/Semester 1/MATLAB/Unit 2/3. Vectors and Matrices.md
@@ -70,3 +70,79 @@ tv = v';
 disp(tr); disp(tv);
 ```
 
+## Appending Vectors
+
+The same constraints and properties apply to this as when crating vectors.
+
+```matlab
+r1 = [ 1 2 3 4 ];
+r2 = [5 6 7 8 ];
+r = [r1,r2]
+rMat = [r1;r2]
+ 
+c1 = [ 1; 2; 3; 4 ];
+c2 = [5; 6; 7; 8 ];
+c = [c1; c2]
+cMat = [c1,c2]
+```
+
+
+## Magnitude of Vector
+
+- Take the product of the vector with itself, using **array multiplication** (.*). This produces a vector sv, whose elements are squares of the elements of vector v.
+    
+    sv = v.*v;
+    
+- Use the sum function to get the **sum** of squares of elements of vector v. This is also called the dot product of vector v.
+    
+    dp= sum(sv);
+    
+- Use the **sqrt** function to get the square root of the sum which is also the magnitude of the vector v.
+    
+    mag = sqrt(s);
+
+```matlab
+v = [1: 2: 20];
+sv = v.* v;
+
+dp = sum(sv);
+mag = sqrt(dp);
+disp('Magnitude:'); 
+disp(mag);
+```
+
+
+## Dot Product
+
+Dot product of two vectors a and b is calculated using the **dot** function.
+
+```matlab
+v1 = [2 3 4];
+v2 = [1 2 3];
+dp = dot(v1, v2);
+disp('Dot Product:'); 
+disp(dp);
+```
+
+
+## Referencing Elements of a Matrix
+
+```matlab
+a = [ 1 2 3 4 5; 2 3 4 5 6; 3 4 5 6 7; 4 5 6 7 8];
+a(2,5)
+```
+
+Reference all the elements in the mth column we type A(:,m).
+
+```matlab
+a = [ 1 2 3 4 5; 2 3 4 5 6; 3 4 5 6 7; 4 5 6 7 8];
+v = a(:,4)
+```
+
+Select the elements in the mth through nth columns
+
+```matlab
+a = [ 1 2 3 4 5; 2 3 4 5 6; 3 4 5 6 7; 4 5 6 7 8];
+a(:, 2:3)
+```
+
