Update 1. Intro to OS.md

--- a/content/OS/1. Intro to OS.md
+++ b/content/OS/1. Intro to OS.md
@@ -19,4 +19,75 @@
 
 - Virtualization allows many programs to run (sharing CPU), to concurrently access instructions and data (sharing memory), access devices (sharing disks), OS could also be called a **Resource Manager**.
 
-- 
+- CPU, Memory, Disk is a resource of the system.
+
+# Virtualizing CPU
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <sys/time.h>
+#include <assert.h>
+#include "common.h"
+
+int main(int argc, char *argv[])
+{
+	if (argc !=2){
+		fprintf(stderr,"usage: cpu <string>\n");
+		exit(1);
+	}
+	
+	char *str = argv[1];
+	
+	while (1){
+		// Waits for a second
+		Spin(1);
+		// Prints out the user input
+		printf("%s\n",str);
+	}
+	return 0;
+}
+```
+
+- The system begins running the program, which repeatedly checks the time until a second has elapsed.
+- Once a second has elapsed, code prints the input by the user.
+- The program will run forever, as there is no exit condition.
+- OS with some help from the hardware, is in charge of this illusion, i.e., the illusion that the system has a very large number of virtual CPUs. Turning a single CPU (or a small set of them) into a seemingly infinite number of CPUs and thus allowing many programs to seemingly run at once is what we call **virtualizing the CPU**.
+- To run programs, stop them from running, and tell OS which programs to run, OS provides some interfaces (APIs).
+- Ability to run multiple programs, comes with some questions - 
+	- If two programs want to run at a particular time, which should actually run?
+	- These are implemented with the help of **policies** of the OS.
+
+
+# Virtualizing Memory
+
+```c
+#include <unistd.h>
+#include <stdio.h>
+#include <stdlib.h>
+#include "common.h"
+
+int main(int agc, char *argv[]){
+	int *p = malloc(sizeof(int));
+	assert(p != NULL);
+	printf("(%d) address pointed to by p: %p\n", getpid(), p);
+	*p = 0;
+	while (1){
+		Spin(1);
+		*p = *p+1;
+		printf("(%d) p: %d\n",getpid(), *p);
+	}
+	return 0;
+}
+```
+
+- Memory is just an array of bytes.
+- To **read** - we need the address
+- To **write** or **update** - we need the address and the data
+- Memory is accessed all the time when a program is running.
+- A program keeps all of its data structures in memory
+- All of the instructions of the program is in memory too
+- Memory is accessed on each instruction fetch.
+- **PID** - Process Identifier. Unique per running process.
+- Run multiple instances of this same program to see what happens. We see that each running program has allocated memory at the same address, yet each seems to be updating the value independently! Each running program has its own private memory, instead of sharing the same physical memory with other running programs.
+- Each process accesses its own private virtual address space (sometimes just called **address space**), which the OS somehow maps onto the physical memory of the machine.
