--- a/content/OS/1. Intro to OS.md
+++ b/content/OS/1. Intro to OS.md
@@ -41,7 +41,7 @@ int main(int argc, char *argv[])
 	
 	while (1){
 		// Waits for a second
-		Spin(1);
+		Spin(1); // Purpose -> block everything from running (1 sec)
 		// Prints out the user input
 		printf("%s\n",str);
 	}
@@ -91,3 +91,47 @@ int main(int agc, char *argv[]){
 - **PID** - Process Identifier. Unique per running process.
 - Run multiple instances of this same program to see what happens. We see that each running program has allocated memory at the same address, yet each seems to be updating the value independently! Each running program has its own private memory, instead of sharing the same physical memory with other running programs.
 - Each process accesses its own private virtual address space (sometimes just called **address space**), which the OS somehow maps onto the physical memory of the machine.
+
+# Concurrency
+
+```cpp
+#include <stdio.h>
+#include <stdlib.h>
+#include "common.h"
+#include "common_threads.h"
+
+volatile int counter = 0;
+int loops;
+
+
+void *worker(void *arg){
+	int i;
+	for (i=0; i<loops; i++){
+		counter++;
+	}
+	return NULL;
+}
+
+int main(int argc, char *argv[]){
+	if (argc != 2){
+		fprintf(stderr, "usage:threads <value>\n");
+		exit(1);
+	}
+	loops = atoi(argv[1]);
+	ptrhead_t p1, p2;
+	printf("Initial value : %d\n", counter);
+	Pthread_create(&p1, NULL, worker, NULL);
+	Pthread_create(&p2, NULL, worker, NULL);
+	Pthread_join(p1,NULL);
+	Pthread_join(p2,NULL);
+	printf("Final value : %d\n",counter);
+	return 0;
+}
+```
+
+- Working on many things at once (i.e. concurrently)
+- OS is juggling many things at once, first running one process, then another, and so forth. As it turns out, doing so leads to some deep and interesting problems.
+- The problems of concurrency are no longer limited just to the OS itself. Indeed, modern multi-threaded programs exhibit the same problems.
+- **Thread** - A function running within the same memory space as other functions, with more than one of them active at a time.
+- Pthread_create() - Creates thread, gives it a **worker** (routine).
+- 
