--- a/content/OS/1. Intro to OS.md
+++ b/content/OS/1. Intro to OS.md
@@ -129,9 +129,44 @@ int main(int argc, char *argv[]){
 }
 ```
 
+
 - Working on many things at once (i.e. concurrently)
 - OS is juggling many things at once, first running one process, then another, and so forth. As it turns out, doing so leads to some deep and interesting problems.
 - The problems of concurrency are no longer limited just to the OS itself. Indeed, modern multi-threaded programs exhibit the same problems.
 - **Thread** - A function running within the same memory space as other functions, with more than one of them active at a time.
 - Pthread_create() - Creates thread, gives it a **worker** (routine).
-- 
+- The reason for the oddities are how instructions are executed (one at a time).
+- 3 Instructions - one to load the value of the counter from memory to register(CPU storage), one to increment it, and one to store it back into memory.
+- These three instructions do not execute atomically(all at once)
+
+# Persistence
+
+- In system memory, data can be easily lost, as they are stored in a volatile manner(power goes away, data lost).
+- Hardware and software to store data persistently (permanently). CD -> Permanently -> Store
+- The hardware comes in the form of some kind of Input/Output. (HDD/SSD)
+- The software is OS that manages the disk is called the **File System**.
+- Responsible for storing any files reliably and efficiently.
+- OS does not create a private virtualized disk for each application.
+
+## Using the file system
+
+- The ﬁle system ﬁgures out where on disk this new data will reside.
+- Keeping track of it in various structures the ﬁle system maintains.
+- Doing so requires issuing I/O requests to the underlying storage device, to either read existing structures or update (write) them. 
+- OS provides a standard and simple way to access devices through its system calls. Thus, the OS is sometimes seen as a **standard library.**
+- For performance reasons, most ﬁle systems ﬁrst delay such writes for a while, hoping to batch them into larger groups.
+
+## Reliability
+
+- To handle system crashes during writes, file systems incorporate **write protocols**.
+- **Journaling and Copy-On-Write** carefully ordering writes to disk. Ensuring recovery to a reasonable state after failure.
+- To make different common operations efﬁcient, ﬁle systems employ many different data structures and access methods, from simple lists to complex binary trees.
+
+# OS Design Goals
+
+- Build up Abstractions (Virtualization) .
+- Provide high performance
+- Minimize Overheads(extra time, space)
+- Security (Isolation). Assures malicious or accidental bad behavior of one does not harm others
+- High degree of Reliability
+- Energy-Efficiency & Mobility (Directly on Power -> Battery)
