--- a/content/OS/2. Virtualization.md
+++ b/content/OS/2. Virtualization.md
@@ -31,7 +31,65 @@ The assigned memory of a process is called its **address space**.
 
 **Mechanism** - Providing answers to how. E.g. - How does an operating system perform context switching
 
-**Policy** - Provides answer too a which question. E.g. - Which process should the operating system run?
+**Policy** - Provides answer to a which question. E.g. - Which process should the operating system run?
 
 # Process API
 
+Basic Requirements for a process API
+
+## Create
+
+Method to Create new processes.
+
+Typing a command into the shell, or opening an application invokes the OS to create a new process
+
+## Destroy
+
+Interface to destroy processes forcefully.
+
+Many processes will run and just exit by themselves. But still OS need to provide a method to kill processes manually by the user.
+
+## Wait
+
+Interface to wait for a process to stop running.
+
+## Miscellaneous Control
+
+Suspend( stop it from running a while )
+
+Resume( Continue running )
+
+## Status
+
+Get status info.
+
+# Creating a Process
+
+1 - Load code and static data into memory ( address space of the process )
+
+Types of loading process - **Eagerly** & **Lazily**
+
+2 - Initializing the heap and stack.
+
+3 - Some more initializations - File Descriptors ( input / output / error)
+
+4 - Provide an entry point ( OS gives control of the CPU to the process )
+
+![[Pasted image 20250218212405.png]]
+
+# Process States
+
+## Running
+
+Currently running, executing instructions
+
+## Ready
+
+Ready to run
+
+## Blocked
+
+Not ready to run until some other event takes place. (E.g. waiting for user input)
+
+Process -> How are we changing the states? - Mechanism
+			Which state to change in? - Policy
