--- a/content/OS/2. Virtualization.md
+++ b/content/OS/2. Virtualization.md
@@ -33,7 +33,7 @@ The assigned memory of a process is called its **address space**.
 
 **Policy** - Provides answer to a which question. E.g. - Which process should the operating system run?
 
-# Process API
+# Process API 
 
 Basic Requirements for a process API
 
@@ -79,7 +79,7 @@ Types of loading process - **Eagerly** & **Lazily**
 
 # Process States
 
-## Running
+## Running (Single Process)
 
 Currently running, executing instructions
 
@@ -93,3 +93,23 @@ Not ready to run until some other event takes place. (E.g. waiting for user inpu
 
 Process -> How are we changing the states? - Mechanism
 			Which state to change in? - Policy
+
+**Process List** - List of Processes
+
+![[Pasted image 20250226210206.png]]
+
+**PCB** - a structure that contains information about a specific process.
+
+
+
+## fork()
+
+- To create a new process
+- An exact copy of the process is created.
+- The newly-created process(child) doesn't start running at main(), instead it runs the code you specify.
+
+## wait()
+- waits for the child process to complete executing
+
+## exec()
+- 
