--- a/content/OS/2. Virtualization.md
+++ b/content/OS/2. Virtualization.md
@@ -112,4 +112,11 @@ Process -> How are we changing the states? - Mechanism
 - waits for the child process to complete executing
 
 ## exec()
-- 
+- Run a program that is different from the calling program.
+
+## kill()
+- To send signals to a process, (pause, die)
+
+## signal()
+- To receive signals.
+
